--- a/question.html
+++ b/question.html
@@ -21,7 +21,7 @@
             <h2>¿és babblegum pink o roast beef marron?</h2>
             <br><br>
             
-            <form action="success.html" method="POST">
+            <form action="success.html">
                 <input type="text" id="field" name="field" required>
                 <button type="submit">Submit</button>
             </form>
