--- a/question.html
+++ b/question.html
@@ -22,7 +22,7 @@
             <br><br>
             
             <form>
-                <input type="text" id="field" name="field" required>
+<!--                 <input type="text" id="field" name="field" required> -->
                 <a href="bubblegum.html" style="display: inline-block; padding: 10px 20px; background-color: #e2839f; color: white; text-align: center; border-radius: 5px; text-decoration: none;">
                     babblegum pink
                 </a>
