--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
                     You got folks workin' side by side, sweatin' an' pullin' their weight,<br>
                     each one a cog in the ol' machine. Y'see, without each hand doin' their part,<br>
                     you're left with nothin' but weeds an' wilted dreams.<br>
-                    But together—well, together, friends,<br>
-                    you might just wrangle a harvest fit for a king, or at least fit for supper.
+                    But together—<br>
+                    well, together, friends,<br>
+                    you might just wrangle a harvest fit for a king,<br>
+                    or at least fit for supper.
                 </p>
             </div>
         </section>
