--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
                     each one a cog in the ol' machine. Y'see, without each hand doin' their part,<br>
                     you're left with nothin' but weeds an' wilted dreams.<br>
                     But together—<br>
-                    well, together, friends,<br>
-                    you might just wrangle a harvest fit for a king,<br>
+                    well, together, friends, you might just wrangle a harvest fit for a king,<br>
                     or at least fit for supper.
                 </p>
             </div>
