--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
             <div class="content">
                 <h1>
-                    A Study on the Synergistic Dynamics of Collaborative Teamwork
+                    A Study on the Synergistic Dynamics of Collaborative Teamwork<br>
+                    i just LOVE theo's jiggly wiggly honkers
                 </h1>
                 <img src="309210398217398123AdobeStock.jpg" alt="Michael Jordan">
                 <h2>Michael Jordan (basketball person) - "Talent wins games, but teamwork and intelligence win championships"</h2>
