--- a/quiz.html
+++ b/quiz.html
@@ -57,7 +57,7 @@
                 <br> <br>
                 <img src="speech.png" height="27">
                 <div class="question">
-                    <label>5. Do it grip?</label><br>
+                    <label>5. Does it grip?</label><br>
                     <input type="text" name="q5" required>
                 </div>
 
