--- a/quiz.html
+++ b/quiz.html
@@ -69,7 +69,7 @@
 
             <section class="band" style="background-color: #afafaf;">
                 <div class="content">
-                    <h2 style="color: black; text-align: left;">Test Result:</h2>
+                    <h2 id="res" style="color: black; text-align: left;">Test Result:</h2>
                     <p id="result" class="result" style="color: black; text-align: left;"></p>
                     <h2 id="gr" style="color: black; text-align: left;"></h2>
                     
@@ -117,6 +117,7 @@
                     msg += "\nno grip?"
                 }
                 document.getElementById("result").innerText = msg;
+                document.getElementById("res").innerText = "";
                 
             }
         </script>
