--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <section class="band" style="--band-color: #30364a; --text-color: #ffffff">
             <div class="content">
                 <h1>
-                    A Study on the Synergistic Dynamics of Collaborative Teamwork
+                    A Study on the Synergistic Dynamics of Collaborative Teamwork<br>
+                    I just LOVE theos jiggly wiggly thighs
                 </h1>
             </div>
         </section>
